# P2Robotica

./: README.md  READMEGLOBAL.md
EJ1_V1/dqn_v_ws/: readme.md
EJ1_V1/dqn_v_ws/results_fixed_20251204_151138/: model_ep50.pkl
EJ1_V1/dqn_v_ws/results_log_20251204_153624/: model_ep100.pkl  model_ep150.pkl  model_ep200.pkl  model_ep50.pkl  model_final.pkl
EJ1_V1/dqn_v_ws/results_rand_20251204_122603/: model_ep50.pkl
EJ1_V1/dqn_v_ws/results_smooth_20251204_152336/: model_ep100.pkl  model_ep50.pkl
EJ1_V1/dqn_v_ws/results_smooth_20251204_153040/: model_ep50.pkl
EJ1_V1/dqn_v_ws/results_v2_20251204_124427/: model_ep100.pkl  model_ep150.pkl  model_ep50.pkl  model_final.pkl
EJ1_V1/dqn_v_ws/results_v2_20251204_130219/: model_ep100.pkl  model_ep150.pkl  model_ep200.pkl  model_ep50.pkl
EJ1_V1/dqn_v_ws/results_v2_20251204_144721/: model_ep100.pkl  model_ep50.pkl  model_final.pkl
EJ1_V2/: README.md
EJ1_V2/dqn_navigation_ws/results_20251204_052059/: model_episode_100.pkl  model_episode_150.pkl  model_episode_200.pkl  model_episode_250.pkl  model_episode_300.pkl  model_episode_350.pkl  model_episode_400.pkl  model_episode_450.pkl  model_episode_50.pkl  model_episode_500.pkl
EJ1_V2/dqn_navigation_ws/src/dqn_robot_nav/: package.xml  setup.py
EJ1_V2/dqn_navigation_ws/src/dqn_robot_nav/dqn_robot_nav/: dqn_agent.py  environment.py  state_processor.py  test_node.py  train_node.py
EJ2/: EJ2.ino
EJ2/EJ2_ws/src/kinet/: package.xml
EJ2/EJ2_ws/src/kinet/kinet/: camera_node.py  detection2.py  detectionyerko.py
EJ3_EXTRA/nema_test_2/: platformio.ini
EJ3_EXTRA/nema_test_2/src/: main.cpp
(+15 files in other folders)
