<?xml version="1.0"?>
<package format="3">
  <name>kinet</name>
  <version>0.0.1</version>
  <description>Detector de gestos Kinect compatible con NumPy 1.x</description>

  <maintainer email="fabricio@example.com">Fabricio</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Dependencias de ejecución -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- Para no permitir numpy 2.x -->
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
